# HuffmanCoding

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  FrequencyCounter.cpp  FrequencyCounter.h  HuffmanDecoder.cpp  HuffmanDecoder.h  HuffmanEncoder.cpp  HuffmanEncoder.h  HuffmanTree.cpp  HuffmanTree.h
